# labo-data-engineering

./: .gitignore  .pre-commit-config.yaml  compose.yml
.devcontainer/: Dockerfile  devcontainer.json
100knock-process-visualization/: はじめに.txt
SQL_Puzzle_2nd_Ed/: convert_puzzles.sh  puzzle_01.txt  puzzle_02.txt  puzzle_03.txt  puzzle_04.txt  puzzle_05.txt  puzzle_06.txt  puzzle_07.txt  puzzle_08.txt  puzzle_09.txt  puzzle_10.txt  puzzle_11.txt  puzzle_12.txt  puzzle_13.txt  puzzle_14.txt  puzzle_15.txt  puzzle_16.txt  puzzle_17.txt  puzzle_18.txt  puzzle_19.txt  puzzle_20.txt  puzzle_21.txt  puzzle_22.txt  puzzle_23.txt  puzzle_24.txt  puzzle_25.txt  puzzle_26.txt  puzzle_27.txt  puzzle_28.txt  puzzle_29.txt  puzzle_30.txt  puzzle_31.txt  puzzle_32.txt  puzzle_33.txt  puzzle_34.txt  puzzle_35.txt  puzzle_36.txt  puzzle_37.txt  puzzle_38.txt  puzzle_39.txt  (+36 more)
SQL_Recipe_sample-code_20170325/: data_trans.sh
gas/: .clasp.json  code.ts  package-lock.json  package.json
gas/sample/: .clasp.json  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
infra/bigquery/: Dockerfile
infra/spark/: Dockerfile
jupyter/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  runmnmcount.sh
jupyter/src/: hello.ipynb
jupyter/src/awesomebook_v2/: Chapter5_1.ipynb
jupyter/src/jupyter/: __init__.py  hello.ipynb
jupyter/src/spark/: mnmcount.py
shellgei160/learn/: 2.1.a.sh  2.1.c.sh  2.1.d.sh  2.1.e.sh  2.1.f.sh  2.1.g.sh  2.1.h.sh  2.2.a.sh  2.2.e.sh  2.3.a.sh  2.3.b.sh
shellgei160/practice/: p1.sh  p10.sh  p11.sh  p12.sh  p13.sh  p14.sh  p15.sh  p16.sh  (+13 more)
(+9 files in other folders)
