[project]
name = "jupyter"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "JojiKoike", email = "5671422+JojiKoike@users.noreply.github.com" }
]
dependencies = [
    "jupyterlab>=4.2.4",
    "pandas>=2.2.2",
    "pyarrow>=17.0.0",
    "pyspark>=3.5.1",
    "matplotlib>=3.9.2",
    "japanize-matplotlib>=1.1.3",
    "seaborn>=0.13.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pre-commit>=3.8.0",
    "ruff>=0.5.6",
    "pytest>=8.3.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/jupyter"]
